# quadruped-robot-using-ros2-

./: .gitignore  README.md
src/: .gitignore
src/qu_bringup/: CMakeLists.txt  package.xml
src/qu_bringup/config/: my_robot_controllers.yaml
src/qu_bringup/launch/: qu_robot.launch.xml
src/qu_description/: CMakeLists.txt  package.xml
src/qu_description/launch/: display.launch.xml
src/qu_description/meshes/: base_link.stl  head_back_left.stl  head_back_right.stl  head_front_forward_left.stl  head_front_forward_right.stl  lower_leg1.stl  lower_leg2.stl  lower_leg3.stl  lower_leg4.stl  upper_leg1.stl  upper_leg2.stl  upper_leg3.stl  upper_leg4.stl
src/qu_description/rviz/: urdf_config.rviz
src/qu_description/urdf/: common_properties.xacro  my_robot.urdf.xacro  qu.ros2_control.xacro  qu.urdf.xacro  qu.urdf.xacro.backup
src/qu_hardware/: CMakeLists.txt  package.xml  qu_hardware_plugin.xml
src/qu_hardware/include/qu_hardware/: arduino_driver.hpp  qu_hardware_interface.hpp
src/qu_hardware/src/: arduino_driver.cpp  qu_hardware_interface.cpp
src/qu_hardware/test/: test_arduino_driver.cpp
